Bug 450854 - Crash creating empty lists
Summary: Crash creating empty lists
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: r-backend (other bugs)
Version First Reported In: 21.12.2
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Cantor Bugs
URL:
Keywords:
: 452046 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-02-25 22:31 UTC by heqromancer
Modified: 2022-03-30 06:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.03
Sentry Crash Report:


Attachments
kcrash file (5.53 KB, text/vnd.kde.kcrash-report)
2022-02-25 22:31 UTC, heqromancer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description heqromancer 2022-02-25 22:31:19 UTC
Created attachment 147127 [details]
kcrash file

SUMMARY
Creating empty list will (sometimes) crash Cantor. This is not a predictable behavior, sometimes it will happen and sometimes it won't. Thus,


STEPS TO REPRODUCE
1. create variable assigned to c(). For example: l = c()

OBSERVED RESULT
Cantor crashes

EXPECTED RESULT
It should create the list and register it in the variable manager.

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS
KDE Plasma Version: 5.24.2
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.2
Kernel Version: 5.16.10-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 2 × Intel® Celeron® N4000 CPU @ 1.10GHz
Memory: 7,6 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 600
Comment 1 Alexander Semke 2022-02-26 17:21:08 UTC
Git commit 62a6356d49806d73b3387ee83bb7c8e6ea316c3d by Alexander Semke.
Committed on 26/02/2022 at 17:19.
Pushed by asemke into branch 'master'.

[R] properly handle the case in the variable model when there is no variable value for a given variable name (e.g. 'l = c()').
FIXED-IN: 22.03

M  +7    -2    src/backends/R/rvariablemodel.cpp

https://invent.kde.org/education/cantor/commit/62a6356d49806d73b3387ee83bb7c8e6ea316c3d
Comment 2 Alexander Semke 2022-03-30 06:51:11 UTC
*** Bug 452046 has been marked as a duplicate of this bug. ***