[R] properly handle the case in the variable model when there is no variable value for a given variable name (e.g. 'l = c()').

BUG: 450854
FIXED-IN: 22.03